fix headers on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -74,8 +74,8 @@ h1 {
   font-size: 5em;
   margin: 2%;
   letter-spacing: auto;
-  line-height: 1px;
-  margin-bottom: 50px;
+  line-height: 50px;
+  margin-bottom: 30px;
 }
 
 h2 {
